AnnotationIntrospector respects @GraphQLIgnore
Fixes #486